trybuild-qcell/src/compiletest/tcell-02.stderr
error[E0308]: mismatched types
   --> src/compiletest/tcell-02.rs:18:28
    |
18  |     let c1ref = owner_b.ro(&*c1);   // Compile error
    |                         -- ^^^^ expected `&TCell<MarkerB, _>`, found `&TCell<MarkerA, u32>`
    |                         |
    |                         arguments to this method are incorrect
    |
    = note: expected reference `&TCell<MarkerB, _>`
               found reference `&TCell<MarkerA, u32>`
note: method defined here
   --> $QCELL/src/tcell.rs
    |
    |     pub fn ro<'a, T: ?Sized>(&'a self, tc: &'a TCell<Q, T>) -> &'a T {
    |            ^^
